# palette-extractor

./: .gitignore  README.md  pyproject.toml
src/palette_extractor/: __init__.py  core.py  utils.py
