[project]
name = "palette-extractor"
version = "0.1.0"
description = "A simple utility for getting a palette from images"
readme = "README.md"
authors = [
    { name = "Andrei Shostak", email = "andrei.shostak@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
]

[project.scripts]
palette-extractor = "palette_extractor:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
